CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(rgbd-grabber)

SET(Boost_USE_STATIC_LIBS OFF)
SET(Boost_USE_MULTITHREADED ON)
SET(Boost_USE_STATIC_RUNTIME OFF)
FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(PCL REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(/usr/local/include)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PCL_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(/opt/softkinetic/DepthSenseSDK/include)

LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)
LINK_DIRECTORIES(/usr/lib)
LINK_DIRECTORIES(/usr/local/lib)
LINK_DIRECTORIES(${PCL_LIBRARY_DIRS})
LINK_DIRECTORIES(/opt/softkinetic/DepthSenseSDK/lib)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
SET(CMAKE_CXX_FLAGS "-std=c++0x -fpermissive -Wno-deprecated -Wno-sign-compare")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -Wall")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG")
SET(CMAKE_CXX_LINK_FLAGS_DEBUG "-pg")

ADD_DEFINITIONS(${PCL_DEFINITIONS})

SET(VERSION "0.1.2")
SET(SOVERSION "0.1")

SET(SRC
  src/camera/DepthCamera.cpp src/camera/UVCamera.cpp src/camera/PMDNano.cpp src/camera/DS325.cpp)

SET(LIB_EXTERNAL
  ${Boost_LIBRARIES} ${OpenCV_LIBS} ${PCL_LIBRARIES}
  DepthSense DepthSensePlugins pmdaccess2)

ADD_LIBRARY(rgbd-grabber SHARED ${SRC})
TARGET_LINK_LIBRARIES(rgbd-grabber ${LIB_EXTERNAL})
SET_TARGET_PROPERTIES(rgbd-grabber PROPERTIES VERSION ${VERSION} SOVERSION ${SOVERSION})

SET(LIB
  rgbd-grabber ${LIB_EXTERNAL})

ADD_EXECUTABLE(UVCameraCapture example/UVCameraCapture.cpp)
ADD_DEPENDENCIES(UVCameraCapture ${SRC})
TARGET_LINK_LIBRARIES(UVCameraCapture ${LIB})

ADD_EXECUTABLE(DS325Capture example/DS325Capture.cpp)
ADD_DEPENDENCIES(DS325Capture ${SRC})
TARGET_LINK_LIBRARIES(DS325Capture ${LIB})

ADD_EXECUTABLE(PMDNanoCapture example/PMDNanoCapture.cpp)
ADD_DEPENDENCIES(PMDNanoCapture ${SRC})
TARGET_LINK_LIBRARIES(PMDNanoCapture ${LIB})

INSTALL(TARGETS rgbd-grabber LIBRARY DESTINATION lib)
INSTALL(FILES
  src/camera/DepthCamera.h src/camera/UVCamera.h src/camera/DS325.h src/camera/PMDNano.h
  DESTINATION include/rgbd/camera)
INSTALL(FILES
  src/util/Error.h
  DESTINATION include/rgbd/util)
